[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/jogo.gd" type="Script" id=1]
[ext_resource path="res://sprites/jogo-geo-bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/carta-p-hi.png" type="Texture" id=3]
[ext_resource path="res://sprites/carta-p-lo.png" type="Texture" id=4]
[ext_resource path="res://scripts/pergunta.gd" type="Script" id=5]
[ext_resource path="res://sprites/carta-r-hi.png" type="Texture" id=6]
[ext_resource path="res://sprites/carta-r-lo.png" type="Texture" id=7]
[ext_resource path="res://scripts/resposta.gd" type="Script" id=8]
[ext_resource path="res://sprites/help-hi.png" type="Texture" id=9]
[ext_resource path="res://sprites/help-lo.png" type="Texture" id=10]
[ext_resource path="res://sprites/thumb-up.png" type="Texture" id=11]
[ext_resource path="res://sprites/thumb-down.png" type="Texture" id=12]

[node name="jogo" type="Node2D"]

script/script = ExtResource( 1 )

[node name="dlghelp" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 213.0
margin/bottom = 228.0
popup/exclusive = true
window/title = "Alerta!"
dialog/text = "Selecione uma pergunta\naleatoriamente. Depois \nselecione uma resposta.\nEntão onfirme se a resposta\ncombina com a pergunta.\nChutes são penalizados.\nResponda a todas as perguntas\ne ganhe pontos. Quanto mais \nrápido jogar mais bonus \nirá ganhar."
dialog/hide_on_ok = true

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="Pergunta" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resposta" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 490.0

[node name="Perguntas" type="GridContainer" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 22.0
margin/top = 11.0
margin/right = 290.0
margin/bottom = 107.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 8
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="b_per1" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 30.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per2" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per3" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 0.0
margin/right = 98.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per4" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 102.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per5" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per6" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per7" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 234.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per8" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 238.0
margin/top = 0.0
margin/right = 268.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per9" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 50.0
margin/right = 30.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per10" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = 50.0
margin/right = 64.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per11" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 50.0
margin/right = 98.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per12" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 102.0
margin/top = 50.0
margin/right = 132.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per13" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 50.0
margin/right = 166.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per14" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 50.0
margin/right = 200.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per15" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 50.0
margin/right = 234.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="b_per16" type="TextureButton" parent="Container/Perguntas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 238.0
margin/top = 50.0
margin/right = 268.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="lbl_pergunta" type="Label" parent="Container"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 38.0
margin/right = 320.0
margin/bottom = 89.0
text = "Uma pergunta de teste"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Respostas" type="GridContainer" parent="Container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 118.0
margin/right = 290.0
margin/bottom = 214.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 8
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="b_res1" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 30.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res2" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res3" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 0.0
margin/right = 98.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res4" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 102.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res5" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res6" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res7" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 234.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res8" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 238.0
margin/top = 0.0
margin/right = 268.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res9" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 50.0
margin/right = 30.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res10" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = 50.0
margin/right = 64.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res11" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 50.0
margin/right = 98.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res12" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 102.0
margin/top = 50.0
margin/right = 132.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res13" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 50.0
margin/right = 166.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res14" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 50.0
margin/right = 200.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res15" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 50.0
margin/right = 234.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="b_res16" type="TextureButton" parent="Container/Respostas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 238.0
margin/top = 50.0
margin/right = 268.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="lbl_reposta" type="Label" parent="Container"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 142.0
margin/right = 319.0
margin/bottom = 193.0
text = "Uma resposta de teste"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ajuda" type="TextureButton" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 287.0
margin/top = 436.0
margin/right = 310.0
margin/bottom = 479.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )

[node name="certo" type="TextureButton" parent="." groups=[ "controle" ]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 98.0
margin/top = 402.0
margin/right = 138.0
margin/bottom = 442.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )

[node name="errado" type="TextureButton" parent="." groups=[ "controle" ]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 195.0
margin/top = 401.0
margin/right = 235.0
margin/bottom = 441.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )

[node name="placar" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 83.0
margin/top = 460.0
margin/right = 226.0
margin/bottom = 474.0
text = "Coloque o Placar Aqui!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 92.0
margin/right = 320.0
margin/bottom = 132.0

[node name="HSeparator1" type="HSeparator" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 201.0
margin/right = 320.0
margin/bottom = 241.0

[connection signal="pressed" from="Container/ajuda" to="." method="_on_ajuda_pressed"]

[connection signal="pressed" from="certo" to="." method="_on_certo_pressed"]

[connection signal="pressed" from="errado" to="." method="_on_errado_pressed"]


